--- a/journal/201910.md
+++ b/journal/201910.md
@@ -8,17 +8,17 @@ _الصورة: تتابع المصدر بواسطة @saender_
 
 أبرز أحداث شهر أكتوبر:
 
-- أصبح إصدار نسخة المرشح 1.5 ل dcrd جاهزا للإختبار. وهو يضم التغيير في قواعد الإجماع لإضافة التزامات رأس الكتلة التي تم تمويلها من قِبَل أصحاب الحصص في يونيو. سيبدأ التصويت على تبني هذا التغيير بمجرد تحديث عقد كافية. التحديثات الرئيسية الأخرى عبارة عن عوامل ترشيح جديدة للعملاء ذوي الوزن الخفيف وإصلاح شامل للبنية التحتية للتعدين وتحسين الأداء وميزات الشبكات الجديدة و أشياء أخرى.
-- بدأت i2 Trading في توفير السيولة في 3 منصات للتبادل (4 أزواج)، وفقا لاقتراحها الناجح.
-- واجهة بوليتيا المعاد تصميمها فعالة! تحقق من ذلك للحصول على تصميم جمالي جديد يتماشى بشكل أكبر مع برامج ديكريد الأخرى وتحسين الأداء.
-- كان شهر أكتوبر شهرًا كبيرًا لفعاليات ديكريد، حيث مثل أعضاء المجتمع ديكريد في جميع أنحاء العالم في الفعاليات التي نظمونها وحضروها.
-- شهد شهر أكتوبر أيضًا نشر منشورات رئيسية من جميع البرامج البحثية النشطة الثلاثة والرابع الذي تمت الموافقة عليه في أوائل نونبر. كان هناك أيضًا عددا من المقالات ووسائل الإعلام الأخرى التي صدرت عن السنة الأولى لبوليتييا (الذكرى السنوية كانت في 16 أكتوبر).
+- أصبح إصدار نسخة المرشح 1.5 ل dcrd جاهزا للإختبار. وهو يضم التغيير في قواعد الإجماع لإضافة إلتزامات رَأْسِيَّة الكتلة التي تم تمويلها من قِبَل أصحاب الحصص في يونيو. سيبدأ التصويت على تبني هذا التغيير بمجرد تحديث عقد كافية. التحديثات الرئيسية الأخرى عبارة عن عوامل ترشيح جديدة للعملاء ذوي الوزن الخفيف وإصلاح شامل للبنية التحتية للتعدين وتحسين الأداء وميزات الشبكات الجديدة و أشياء أخرى.
+- بدأت i2 Trading في توفير السيولة في 3 منصات للتبادل (4 أزواج)، وفقاً لمقترحهم الفائز.
+- إطلاق إعادة تصميم واجهة بوليتيا! القي نظره عليه للحصول على تصميم جمالي جديد يتماشى بشكل أكبر مع برامج ديكريد الأخرى وتحسين الأداء.
+- كان شهر أكتوبر شهرًا مليء بالفعاليات بحضور ديكريد، حيث مثل أعضاء المجتمع ديكريد في جميع أنحاء العالم في الفعاليات التي نظمونها وحضروها.
+- شهد شهر أكتوبر أيضًا نشر منشورات رئيسية من جميع البرامج البحثية الثلاثة النشطة والرابع الذي تمت الموافقة عليه في أوائل نونبر. كان هناك أيضًا عددا من المقالات المنشورة من وسائل الإعلام الأخرى التي غطت السنة الأولى لبوليتييا (الذكرى السنوية كانت في 16 أكتوبر).
 
-## استعدوا للتصويت بالإجماع القادم!
+## استعدوا للتصويت لقواعد الإجماع القادمة!
 
-يأتي التصويت على تغيير قواعد الإجماع في النسخة 1-5. [تتوفر](https://github.com/decred/decred-binaries/releases/tag/v1.5.0-rc1) الآن ثنائيات إصدار المرشح وسيتبع ذلك الإصدار النهائي.
+يأتي التصويت على تغيير قواعد الإجماع في النسخة 1.5. [تتوفر](https://github.com/decred/decred-binaries/releases/tag/v1.5.0-rc1) الآن ثنائيات إصدار المرشح وسيتبع ذلك الإصدار النهائي.
 
-يرجى الاستعداد للتصويت عن طريق تحديث البرنامج وتحديد خيار التصويت لتذاكر منفردة أو عبر موفر خدمة التصويت VSP.
+يرجى الاستعداد للتصويت عن طريق تحديث البرنامج وتحديد خيار التصويت لتذاكر المنفردة أو عبر موفر خدمة التصويت VSP.
 
 يمكنك تعقب التقدم على صفحة [جداول أعمال](https://explorer.dcrdata.org/agendas) dcrdata وعلى [voting.decred.org](https://voting.decred.org/).
 
@@ -28,9 +28,9 @@ _الصورة: تتابع المصدر بواسطة @saender_
 
 **dcrd النسخة 1.5**
 
-تم تنفيذ التزامات رأس الكتلة و أصبحت جاهزة للتفعيل في انتظار إجراء تصويت ناجح على السلسلة. بعد التحديث إلى إصدار النسخة 1.5، يمكن لأصحاب الحصص تعيين تفضيلات التصويت الخاصة بهم من خلال محفظتهم أو موقع موفر خدمة التصويت (VSP). الهدف الرئيسي من هذا التغيير هو زيادة أمان وكفاءة العملاء ذوي الوزن الخفيف، مثل ديكريديتون في وضع التحقق من الدفع البسيط ومحافظ dcrandroid / dcrios للهاتف المحمول. كما أنها ستضيف بنية تحتية تمهد الطريق لعدة تحسينات مستقبلية في مجال التوسع. ويمكن الاطلاع على لمحة عامة رفيعة المستوى عن التغييرات في [مقترح بوليتيا](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) الذي مول العمل.
+تم تنفيذ إلتزامات رَأْسِيَّة الكتلة و أصبحت جاهزة للتفعيل في انتظار إجراء تصويت ناجح على السلسلة. بعد التحديث إلى إصدار النسخة 1.5، يمكن لأصحاب الحصص تعيين تفضيلات التصويت الخاصة بهم من خلال محفظتهم أو موقع موفر خدمة التصويت (VSP). الهدف الرئيسي من هذا التغيير هو زيادة أمان وكفاءة العملاء ذوي الوزن الخفيف، مثل ديكريديتون في وضع التحقق البسيط من الدفع ومحافظ dcrandroid / dcrios للهاتف المحمول. كما أنها ستضيف بنية تحتية تمهد الطريق لعدة تحسينات مستقبلية في مجال التوسع. ويمكن الاطلاع على لمحة عامة رفيعة المستوى عن التغييرات في [مقترح بوليتيا](https://proposals.decred.org/proposals/0a1ff846ec271184ea4e3a921a3ccd8d478f69948b984445ee1852f272d54c58) الذي مول العمل.
 
-تم تنفيذ عوامل ترشيح كتل جديدة. كما تم تحديث هذه المرشحات، التي يستخدمها العملاء ذوو الوزن الخفيف مثل محافظ التحقق من الدفع البسيط SPV، لتحسين كفاءتها وبيئة العمل وضم المعلومات الإضافية مثل النص الكامل لالتزام التذاكر. عوامل ترشيح الكتل الجديدة هي النسخة 2. ويتم الآن إهمال عوامل الترشيح النسخة 1 القديمة ومن المقرر إزالتها في الإصدار التالي، لذلك يجب على المستهلكين تحديث المرشحات الجديدة في أقرب وقت ممكن. لاحظ أن هناك تحديث قاعدة بيانات لمرة واحدة لإنشاء وتخزين المرشحات الجديدة لجميع الكتل التاريخية الحالية والتي من المحتمل أن تستغرق بعض الوقت لإكمالها (عادة حوالي 8 إلى 10 دقائق على محركات الأقراص الصلبة HDD و 4 إلى 5 دقائق على محركات أقراص الحالة الصلبة SDD).
+تم تنفيذ مرشحات الكتلة الجديدة. كما تم تحديث هذه المرشحات، التي يستخدمها العملاء ذوو الوزن الخفيف مثل محافظ التحقق البسيط من الدفع SPV، لتحسين كفاءتها وبيئة العمل وضم المعلومات الإضافية مثل النص الكامل لالتزام التذاكر. مرشحات الكتلة الجديدة هي النسخة 2. ويتم الآن إهمال مرشحات النسخة 1 القديمة ومن المقرر إزالتها في الإصدار التالي، لذلك يجب على المستهلكين تحديث المرشحات الجديدة في أقرب وقت ممكن. لاحظ أن هناك تحديث قاعدة بيانات لمرة واحدة لإنشاء وتخزين المرشحات الجديدة لجميع الكتل التاريخية الحالية والتي من المحتمل أن تستغرق بعض الوقت لإكمالها (عادة حوالي 8 إلى 10 دقائق على محركات الأقراص الصلبة HDD و 4 إلى 5 دقائق على محركات أقراص الحالة الصلبة SDD).
 
 تم إصلاح البنية التحتية للتعدين الخاصة بقوالب البناء الأساسية وتقديم العمل إلى المعدنين. تشمل التحسينات دعم إنشاء نماذج الخلفية غير المتزامنة مع المعالجة الذكية لنشر الأصوات، وتحسين التعامل مع عمليات إعادة تنظيم السلسلة اللازمة عندما لا يكون الطرف الحالي قادراً على الحصول على أصوات كافية، وتحسين تزامن الحالة الحالية، والإقتراب من إزالة القوالب القديمة عند تلقي كتل وأصوات جديدة، والاشتراكات لتحديثات قالب التدفق. كما تم تحديث [getwork RPC](https://github.com/decred/dcrd/blob/master/docs/json_rpc_api.mediawiki#getwork) القياسي الذي يستخدمه معدني إثبات العمل في الوقت الحالي لتنفيذ عملية التعدين للاستفادة من هذه البنية التحتية الجديدة، وبالتالي فإن معدني إثبات العمل الحاليين سيحصلون بسهولة على الغالبية العظمى من الفوائد دون الحاجة إلى أي تحديثات. بالإضافة إلى ذلك، يتوفر الآن [notifywork RPC](https://github.com/decred/dcrd/blob/master/docs/json_rpc_api.mediawiki#notifywork) الجديد والذي يسمح للمعدنين بالتسجيل في العمل ليتم تسليمه بشكل غير متزامن عندما يصبح متاحًا عبر [إشعار عمل](https://github.com/decred/dcrd/blob/master/docs/json_rpc_api.mediawiki#work) WebSockets. وتشمل هذه الإشعارات نفس المعلومات التي يوفرها getwork إلى جانب مُعطى إضافي للسبب. يسمح هذا المُعطى للمعدنين باتخاذ قرارات أفضل حول متى ينبغي إرشاد العاملين إلى التخلص  من القالب الحالي على الفور أو السماح لهم بإنهاء الجولة الحالية قبل أن يتم تزويدهم بقالب جديد.
 
@@ -44,9 +44,9 @@ _الصورة: تتابع المصدر بواسطة @saender_
 
 **dcrwallet النسخة 1.5**
 
-الميزة الرئيسية لهذا الإصدار هو تطبيق [++CoinShuffle](https://github.com/decred/dcrwallet/pull/1541) الأولي الذي يسمح بشراء التذاكر من معاملة CoinJoin للمزيج الجماعي. تعد حماية خصوصية أصحاب الحصص الفرديين أمرًا في غاية الأهمية لأنها تحسن أيضًا من أمان الشبكة. يتضمن الإصدار الأولي عددًا من القيود، أبرزها الافتقار إلى دعم تذاكر موفر خدمة التصويت (VSP)، وعدم وجود واجهة مستخدم رسومية والاعتماد على الخادم المركزي للتنسيق. وسيتم تناول هذه المسائل في النسخة المقبلة. ومن الجدير بالذكر أن الخادم لا يستطيع معرفة أي المخرجات تنتمي إلى النظير، على عكس تصميمات CoinJoin القديمة.
+الميزة الرئيسية لهذا الإصدار هو تطبيق [++CoinShuffle](https://github.com/decred/dcrwallet/pull/1541) الأولي الذي يسمح بشراء التذاكر من معاملة CoinJoin المزج الجماعي. تعد حماية خصوصية أصحاب الحصص الفرديين أمرًا في غاية الأهمية لأنها تحسن أيضًا من أمان الشبكة. يتضمن الإصدار الأولي عددًا من القيود، أبرزها الافتقار إلى دعم تذاكر موفر خدمة التصويت (VSP)، وعدم وجود واجهة مستخدم رسومية والاعتماد على الخادم المركزي للتنسيق. وسيتم تناول هذه المسائل في النسخة المقبلة. ومن الجدير بالذكر أن الخادم لا يستطيع معرفة أي المخرجات تنتمي إلى النظير، على عكس تصميمات CoinJoin القديمة.
 
-تشمل الميزات الأخرى أجندة التصويت لتغيير إجماع التزامات رأس الكتلة، والقدرة على [استيراد](https://github.com/decred/dcrwallet/pull/1471) المفاتيح الرئيسية التعسفية الموسعة (خطوة مهمة نحو إزالة إعادة استخدام العنوان)، علامة لمنع المحفظة من تحديث نوع العملة، وعددا من طرق RPC المفيدة، وتحسين الأداء و إصلاح أخطاء متعددة.
+تشمل الميزات الأخرى أجندة التصويت لتغيير خوارزميةإجماع رَأْسِيَّة الكتلة، والقدرة على [استيراد](https://github.com/decred/dcrwallet/pull/1471) المفاتيح الرئيسية التعسفية الموسعة (خطوة مهمة نحو إزالة إعادة استخدام العنوان)، علامة لمنع المحفظة من تحديث نوع العملة، وعددا من طرق RPC المفيدة، وتحسين الأداء و إصلاح أخطاء متعددة.
 
 **ديكريديتون النسخة 1.5**
 
@@ -90,7 +90,7 @@ _الصورة: تتابع المصدر بواسطة @saender_
 
 [dcrandroid](https://github.com/decred/dcrandroid): يستمر العمل على واجهة المستخدم الجديدة من خلال [صفحة رئيسية](https://github.com/decred/dcrandroid/pull/401) تم تحسينها وغيرها من التحسينات لمحاذاة التطبيق مع توصيات تصميم التطبيقات القياسية لنظام الأندرويد. ويستمر العمل على [دعم محفظة متعددة](https://github.com/raedahgroup/dcrlibwallet/pull/57). سيسمح هذا للمستخدمين باستيراد المفتاح العمومي الخاص بهم من ديكريديتون حتى يتمكنوا من مراقبة حالة تذاكرهم من هواتفهم.
 
-[dcrios](https://github.com/raedahgroup/dcrios): تحسينات واجهة المستخدم جارية لصفحات [استعادة البذور](https://github.com/raedahgroup/dcrios/pull/527) و[النظرة العامة](https://github.com/raedahgroup/dcrios/pull/526) و[قائمة التنقل](https://github.com/raedahgroup/dcrios/pull/524).
+[dcrios](https://github.com/raedahgroup/dcrios): تحسينات واجهة المستخدم جارية لصفحات [استعادة البَذْرَة](https://github.com/raedahgroup/dcrios/pull/527) و[النظرة العامة](https://github.com/raedahgroup/dcrios/pull/526) و[قائمة التنقل](https://github.com/raedahgroup/dcrios/pull/524).
 
 [dcrdata](https://github.com/decred/dcrdata): إعادة تصميم [قوائم الكتل](https://github.com/decred/dcrdata/pull/1577) وتحسينات الاتصال والأداء وإصلاح الأخطاء.
 
@@ -108,7 +108,7 @@ _الصورة: تتابع المصدر بواسطة @saender_
 
 مرحبا بالمساهمين الجدد مع دمج الكود إلى الماستر: Enrico Bonetti Vieno (على [dcrweb](https://github.com/decred/dcrweb/commits?author=ebonetti)).
 
-نظرًا لأن عمليات المسح الضوئي يقوم بها جهاز المساهم للمرة الأولى فقط، فلقد فوتنا مصممين جديدين:
+نظرًا لأن مكشافنا الخاص بي المساهمين للمرة الاولى يقوم بالبحث عن التغيرات فقط، فلقد فوتنا مصممين جديدين:
 
 - ساهم Vlad Kharlantsev (مصمم من Block 42) في إنشاء [dcrtimegui](https://github.com/decred/dcrtimegui/issues?q=author%3Aharlovski) وبيانات [dcrdata](https://github.com/decred/dcrdata/issues?q=author%3Aharlovski) منذ شهر ماي.
 
@@ -127,7 +127,7 @@ _الصورة: تتابع المصدر بواسطة @saender_
 * مستخدمي السلاك: 6,858 (7+)
 * مستخدمي الديسكورد: 2,542 (55+) تم التحقق من 358 (33+) ليقوموا بالتعليق.
 * مستخدمي التيليجرام: 2,967 (81-)
-* المشاركين في اليوتيوب: 3,860 (30+)
+* المشتركين في اليوتيوب: 3,860 (30+)
 * متابعي الفيسبوك: 3,296 (18+)، إعجاب: 3,019 (16+)
 * متابعي لينكد إن: 638 (+16)
 * نجوم Github dcrd: بلغت 517 (0+)، تفرعات: 1,400 (6+)
@@ -266,7 +266,7 @@ _الصورة: تتابع المصدر بواسطة @saender_
 مقالات مختارة:
 
 * [أصدرت](https://twitter.com/Delphi_Digital/status/1181228136274518016) Delphi Digital التعمق في ديكريد لمؤسساتها المشتركة (غير متاح للجمهور).
-* ديكريد — متنافس بديل بواسطة ammarooni@ (على [medium](https://medium.com/@Ammarooni/decred-an-alternative-contender-a3547a014745)))
+* ديكريد — منافس بديل بواسطة ammarooni@ (على [medium](https://medium.com/@Ammarooni/decred-an-alternative-contender-a3547a014745)))
 * ديكريد يتبع خطوات البتكوين بواسطة Checkmate@ (على [medium](https://medium.com/@_Checkmatey_/decred-following-in-bitcoins-footsteps-f8d0e0bbaff5)) - وهو جزء من [اقتراحه](https://proposals.decred.org/proposals/78b50f218106f5de40f9bd7f604b048da168f2afbec32c8662722b70d62e4d36).
 * تظهر البيانات أن العملة المستقلة ديكريد لها علاقة قانون السلطة مع بتكوين ([cryptoslate](https://cryptoslate.com/data-shows-autonomous-coin-decred-has-a-power-law-relationship-with-bitcoin/))
 * [أصدر](https://twitter.com/BarnardTheBear/status/1185200240770670596) BlackBearXVII@ سلسلة من 10 أجزاء على Medium ​​(ديكريد X) ،دفعة واحدة كل 3 أيام.
