Update Decred Journal October 2019 Arabic

--- a/journal/201910.md
+++ b/journal/201910.md
@@ -152,7 +152,7 @@ _الصورة: تتابع المصدر بواسطة @saender_
 - استعراض مصور [بالفيديو](https://www.youtube.com/watch?v=58gTCW7DTMg) بواسطة Exitus@
 - [عَرْض تاريخيّ](https://blockcommons.red/post/year-of-politeia/) بواسطة richardred@
 
-بدأت عملية إعادة تصميم بوليتيا في 29 من أكتوبر، الأمر الذي جعل الموضوع متماشياً مع مشاريع ديكرد الأخرى، الأمر الذي أدى إلى إدخال عدد من التحسينات الإضافية على الأداء. وقد نشر lukebp@ [تغريدات](https://twitter.com/lukebp_/status/1189219953855082497) عنها، بما في ذلك ملاحظة مفادها أن بوليتيا تستطيع استخدام مطور واجهة موهوب آخر.
+بدأت عملية إعادة تصميم بوليتيا في 29 من أكتوبر، الأمر الذي جعل الموضوع متماشياً مع مشاريع ديكرد الأخرى، مما أدى إلى إدخال عدد من التحسينات الإضافية على الأداء. وقد نشر lukebp@ [تغريدات](https://twitter.com/lukebp_/status/1189219953855082497) عنها، بما في ذلك ملاحظة مفادها أن بوليتيا تستطيع استخدام مطور واجهة موهوب آخر.
 
 قدم degeri@ [تحديثا](https://bounty.decred.org/2019/10/status-update/) عن برنامج المكافأة. وتم تجهيز 16 تقريرا جديدا منذ يوليوز، كان واحد منها مؤهلا للحصول على تعويض — وهي [مسألة](https://github.com/decred/dcrdata/pull/1563) أمنية في dcrdata (تم إصلاحها الآن).
 
