--- a/journal/201910.md
+++ b/journal/201910.md
@@ -395,6 +395,6 @@ _الصورة: تتابع المصدر بواسطة @saender_
 
 صورة العنوان: saender
 
-النسخة الأصلية لمجلة الديكريد لشهر يوليوز متوفرة على هذا الرابط [هنا](https://medium.com/decred/decred-journal-october-2019-66927ec198bf)
+النسخة الأصلية لمجلة الديكريد لشهر أكتوبر متوفرة على هذا الرابط [هنا](https://medium.com/decred/decred-journal-october-2019-66927ec198bf)
 
 تمت الترجمة إلى اللغة العربية بواسطة: arij@. قام بالمراجعة abdulrahman4@.
