--- a/journal/201911.md
+++ b/journal/201911.md
@@ -4,7 +4,7 @@
 
 ![abstract art](../img/journal-201911-384.png)
 
-_الصورة: نقل السلطة بواسطة @saender_
+_الصورة: نقل السلطة بواسطة saender@_
 
 أهم أخبار شهر نونبر:
 
@@ -24,7 +24,7 @@ _الصورة: نقل السلطة بواسطة @saender_
 
 تم تقديم أمر [`regentemplate`](https://github.com/decred/dcrd/pull/1979) لفرض إنشاء أحدث قالب مع أي معاملات جديدة.
 
-ثم تغيير الميمبول إلى [طرد](https://github.com/decred/dcrd/pull/1982) أي معاملات يتيمة متبقية عندما يتم قطع الاتصال من النظير الذي تم الإرسال منه و[تعديل](https://github.com/decred/dcrd/pull/1984) سياسة المعاملات اليتيمة وفقاً للتحسينات الأخيرة.
+تم تغيير الميمبول [لطرد](https://github.com/decred/dcrd/pull/1982) أي معاملات يتيمة متبقية عندما يتم قطع الاتصال من النظير الذي تم الإرسال منه و[تعديل](https://github.com/decred/dcrd/pull/1984) سياسة المعاملات اليتيمة وفقاً للتحسينات الأخيرة.
 
 تمت [إضافة](https://github.com/decred/dcrd/pull/2000) معلمة سلسلة جديدة لتحديد الحد الأدنى الإجمالي المعروف للعمل في السلسلة. و يقوم الكود بالتحقق من أنه تم تحديث السلسلة الحالية لاستخدام العمل الكلي بدلاً من نقطة التفتيش النهائية لرأس الكتلة. ولا تعتمد هذه الطريقة على نقاط التفتيش المعروفة الموثوق بها، وهي صالحة بغض النظر عن الترتيب الذي يتم به استلام القوالب ومعالجتها، وهي بشكل عام قيمة أكثر موضوعية لا يمكن إبطالها بواسطة إعادة تنظيم السلسلة.
 
@@ -237,7 +237,7 @@ _الصورة: نقل السلطة بواسطة @saender_
   - ديكريد X / الجزء السادس - مثلث الثقة (على [medium](https://medium.com/@imagnusholdings/decred-x-part-vi-triune-of-trust-3fa7ad1476a5))
   - ديكريد X / الجزء السابع - الدليل الميداني أ (على [medium](https://medium.com/@imagnusholdings/decred-x-part-vii-field-manual-a-68306f23d2ca))
   - ديكريد X / الجزء الجزء الثامن - الدليل الميداني ب الجانب المشرق (على [medium](https://medium.com/@imagnusholdings/decred-x-part-viii-silver-linings-field-manual-b-d38cb0e6e17c))
-  - ديكريد X / الجزء التاسع - الاقتصاد الفرعي على ([medium](https://medium.com/@imagnusholdings/decred-x-part-ix-sub-economics-e3b0a5e948e1)
+  - ديكريد X / الجزء التاسع - الاقتصاد الفرعي على ([medium](https://medium.com/@imagnusholdings/decred-x-part-ix-sub-economics-e3b0a5e948e1))
 
 الترجمات:
 
