--- a/journal/201911.md
+++ b/journal/201911.md
@@ -10,7 +10,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 - تم إصدار المرشحين 2 و3 للنسخة 1.5.0 وتم تحديد المشاكل لكلا المرشحين (تؤثر مشكلة مرشح الإصدار 3 على ديكريديتون المشغلة على نظام الويندوز)، لذلك توقع إصدار مرشح آخر قريبًا. شكرا لكل من يساهم بتحميل إصدارات الترشيح هذه والإبلاغ عن أي خلل يصادفونه.
 
-- شهد مشروع البنية التحتية للتبادل اللامركزي لديكريد تقدماً ملحوظاً هذا الشهر، مع إضافة الإصدارات الأولية من محفظة ديكريد وإدارة المصادقة ومعالجة الحقبة.
+- شهدت البنية التحتية لمشروع التبادل اللامركزي لديكريد تقدماً ملحوظاً هذا الشهر، مع إضافة الإصدارات الأولية من محفظة ديكريد وإدارة المصادقة ومعالجة الحقبة.
 
 - تمت الموافقة على اقتراح التسويق و الفعاليات بأمريكا اللاتينينة ل elian@، مما يجعله أول جهد تسويق إقليمي يتم اعتماده بميزانية مستقلة عن جهد التسويق الرئيسي.
 
@@ -26,7 +26,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 تم تغيير الميمبول [لطرد](https://github.com/decred/dcrd/pull/1982) أي معاملات يتيمة متبقية عندما يتم قطع الاتصال من النظير الذي تم الإرسال منه و[تعديل](https://github.com/decred/dcrd/pull/1984) سياسة المعاملات اليتيمة وفقاً للتحسينات الأخيرة.
 
-تمت [إضافة](https://github.com/decred/dcrd/pull/2000) معلمة سلسلة جديدة لتحديد الحد الأدنى الإجمالي المعروف للعمل في السلسلة. و يقوم الكود بالتحقق من أنه تم تحديث السلسلة الحالية لاستخدام العمل الكلي بدلاً من نقطة التفتيش النهائية لرأس الكتلة. ولا تعتمد هذه الطريقة على نقاط التفتيش المعروفة الموثوق بها، وهي صالحة بغض النظر عن الترتيب الذي يتم به استلام القوالب ومعالجتها، وهي بشكل عام قيمة أكثر موضوعية لا يمكن إبطالها بواسطة إعادة تنظيم السلسلة.
+تمت [إضافة](https://github.com/decred/dcrd/pull/2000) معيار سلسلة جديدة لتحديد الحد الأدنى الإجمالي المعروف للعمل في السلسلة. و يقوم الكود بالتحقق من أنه تم تحديث السلسلة الحالية لاستخدام العمل الكلي بدلاً من نقطة التفتيش النهائية لرَأْسِيَّة الكتلة. ولا تعتمد هذه الطريقة على نقاط التفتيش المعروفة الموثوق بها، وهي صالحة بغض النظر عن الترتيب الذي يتم به استلام القوالب ومعالجتها، وهي بشكل عام قيمة أكثر موضوعية لا يمكن إبطالها بواسطة إعادة تنظيم السلسلة.
 
 تم [تمديد](https://github.com/decred/dcrd/pull/2002) حزمة `lru` للسماح بإدخال واسترجاع أزواج القيمة الرئيسية (بالإضافة إلى القيم فقط).
 
@@ -38,9 +38,9 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 [ديكريديتون](https://github.com/decred/decrediton): تم القيام بالعديد من إصلاحات الأخطاء وعمليات تعديل واجهة المستخدم، وتنظيف الكود.
 
-تمت إضافة التبديل [لإنشاء](https://github.com/decred/decrediton/pull/2310) حساب محفظة خاص بالشبكة البرقية عند تهيئة محفظة الشبكة البرقية لأول مرة. وهذا من شأنه تحفيز المستخدمين على عدم استخدام حساب محفظتهم الافتراضي الذي من المرجح أن يحتوي غالبية أموالهم، مما قد يؤدي إلى فتح قنوات عديدة تلقائيًا في حال تحديد ميزة القيادة الآلية.
+تمت إضافة وصلة مفصلية [لإنشاء](https://github.com/decred/decrediton/pull/2310) حساب محفظة خاص بالشبكة البرقية عند تهيئة محفظة الشبكة البرقية لأول مرة. وهذا من شأنه تحفيز المستخدمين على عدم استخدام حساب محفظتهم الافتراضي الذي من المرجح أن يحتوي غالبية أموالهم، مما قد يؤدي إلى فتح قنوات عديدة تلقائيًا في حال تحديد ميزة القيادة الآلية.
 
-تم تنفيذ مجموعة جديدة من [العروض المستجيبة](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2019-11-01..2019-11-30+responsive).
+تم تنفيذ دفعة جديدة من [العروض المستجيبة](https://github.com/decred/decrediton/pulls?q=is%3Apr+merged%3A2019-11-01..2019-11-30+responsive).
 
 تم إصلاح العديد من الأخطاء التي تم العثور عليها أثناء اختبار إصداري المرشح 1 والمرشح 2.
 
@@ -121,7 +121,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 تمت الموافقة على [اقتراح](https://proposals.decred.org/proposals/5af0ce1cd325be6be39109c2750f34095c4e8feeea962ede058a1e4f4a61473e) التسويق والفعاليات بأمريكا اللاتينية من قبل elian@ بنسبة تصويت بلغت 75٪ بنعم ومشاركة ب 29٪، وتمت الموافقة على [اقتراح](https://proposals.decred.org/proposals/65bde4146b845e7e839d6916d4d8f642bc39c250df5379c2f1e26c4ab778ec1a) البحث والتعليم من قبل ammarooni@ بنسبة تصويت بلغت 80٪ بنعم ومشاركة ب 29٪ . كما تم رفض [اقتراح](https://proposals.decred.org/proposals/5a1bd4116565d107c1672799ed16cae9e92ec633c6e39d9b463b8218e66ff759) جائزة Dota2 بنسبة موافقة بلغت 5% ومشاركة 29%.
 
-أصدر richardred@ [تقريرًا](https://www.blockcommons.red/publication/mm-tracking-1/) في كتب طلبات DCR من منتصف أكتوبر إلى منتصف نونبر، حيث بدأت شركة i2 Trading في جعل أسواق DCR متوافقة مع [اقتراحها](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9) المعتمد. وتتوفر السيولة الإضافية، على الرغم من أنها وفقاً للطريقة التي تم بها قياسها خلال هذا الإطار الزمني (حيث خلقت تقلبات الأسعار ظروفاً صعبة)، إلا أنها ربما لم تكن متوفرة مع وقت تشغيل يبلغ 90% في كل منصات التبادل والأزواج.
+أصدر richardred@ [تقريرًا](https://www.blockcommons.red/publication/mm-tracking-1/) عن دفتر الطلبات DCR من منتصف أكتوبر إلى منتصف نونبر، حيث بدأت شركة i2 Trading في صناعة أسواق DCR متوافقة مع [اقتراحها](https://proposals.decred.org/proposals/2eb7ddb29f151691ba14ac8c54d53f6692c1f5e8fe06244edf7d3c33fb440bd9) المعتمد. وتتوفر السيولة الإضافية، على الرغم من أنها وفقاً للطريقة التي تم بها قياسها خلال هذا الإطار الزمني (حيث خلقت تقلبات الأسعار ظروفاً صعبة)، إلا أنها ربما لم تكن متوفرة مع وقت تشغيل يبلغ 90% في كل منصات التبادل والأزواج.
 
 لمزيد من التغطية المتعمقة لنشاط بوليتيا، انظر بوليتيا دايجيست [العدد 25](https://blockcommons.red/politeia-digest/issue025/).
 
@@ -209,7 +209,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 الفعالية القادمة:
 
-* 12-13 دجنبر - Labitconf - مونتيفيديو، أوروغواي. سيكون أعضاء فريق ديكريد حاضرين في أكبر مؤتمر للعملة القمية و سلسلة الكتل في أمريكا اللاتينية.
+* 12-13 دجنبر - Labitconf - مونتيفيديو، أوروغواي. سيكون أعضاء فريق ديكريد حاضرين في أكبر مؤتمر للعملة الرقمية و سلسلة الكتل في أمريكا اللاتينية.
 * 7 يناير - [منتدى المال الرقمي](https://thedigitalmoneyforum.com/) - لاس فيجاس، الولايات المتحدة الأمريكية. هذه الفعالية جزء من مؤتمر CES 2020. وسيتحدث akinsawyerr@ في [جلسة](https://thedigitalmoneyforum.com/Sessions/the-problem-with-old-money-a-great-debate/) حول الاقتصاد المستقبلي.
 * 29-31 يناير - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) -  الويب. سيقدم lukebp@ نظرة عامة عن خطط ديكريد لعام 2020.
 * أبريل  — Blockchain Land at Talent Land — Guadalajara, Mexico. سيكون ديكريد راعيا لأرض المواهب وسيكون موجودا مع كشك في بلوكتشل لاند.
@@ -296,17 +296,17 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 ## الخارجية ذات الصلة
 
-نشرت Coinbase [منشورًا](https://blog.coinbase.com/how-coinbase-views-proof-of-work-security-f4ba1a139da0) عن أمن إثبات العمل، مبيِّنة فيه موقفها بأنه من المفيد بالنسبة للأمن أن يتم تعدين العملة بواسطة الأجهزة المخصصة لهذا (مثل ASICs)، وهذا التنوع في التصنيع والملكية يخدم جيدا بواسطة الخوارزميات الصديقة ل ASIC.
+نشرت Coinbase [منشورًا](https://blog.coinbase.com/how-coinbase-views-proof-of-work-security-f4ba1a139da0) عن أمَان إثبات العمل، مبيِّنة فيه موقفها بأنه من المفيد بالنسبة للأمان أن يتم تعدين العملة بواسطة الأجهزة المخصصة لهذا (مثل ASICs)، وهذا التنوع في التصنيع والملكية يخدم جيدا بواسطة الخوارزميات الصديقة ل ASIC.
 
 الرئيس التنفيذي لشركة MicroBT (صانع Whatsminer D1، واحدة من أجود آلات تعدين ديكريد الحالية) [اعتقل](https://insidebitcoins.com/news/chinese-police-conduct-snap-raid-of-microbt-premises-arrests-ceo/242367) في شنتشن، الصين، بسبب انتهاك براءات اختراع آلات التعدين.
 
 قام خطأ في تطبيق لزيكاش [بتسريب بيانات التعريف](https://duke.leto.net/2019/10/01/zcash-metadata-leakage-cve-2019-16930.html) مما يسمح للمهاجم بربط عناوين IP بعناوين زيكاش المحمية (_فوت في أكتوبر_). من المطوّر الذي اكتشفه: "كل الأشخاص الذين يستخدمون zaddrs والذين شاركوا zaddrs مع أطراف ثالثة. (…) ضع في اعتبارك عنوان IP ومعلومات الموقع الجغرافي المرتبطة به على أنها مرتبطة بـ zaddr". تم نسخ الخطأ من مصدر برنامج Bitcoin Core وتم تقديمه في زيكاش في عام 2016. تم إصلاح التسرب في إصدار النسخة 2.0.7-3، على الرغم من أن [الإعلان الأمني](https://z.cash/support/security/announcements/security-announcement-2019-09-24/) أوصى للتو بالتحديث مباشرة من دون إعطاء أي تفاصيل. وقد تأثرت عدد من المشاريع التي ورثت كود زيكاش. وهذا يوضح أن تقنية الخصوصية دقيقة للغاية وتتطلب البساطة ونهج البرمجة القوي والمراجعة والاختبارات الشاملة للغاية.
 
-توصلت مؤسسة زيكاش وشركة العملة الكهربائية إلى [اتفاقية](https://www.zfnd.org/blog/zcash-trademark-resolution/) حول كيفية التعامل مع العلامة التجارية زيكاش. وقد تم نقل هذا إلى المؤسسة، مع الاتفاق الذي تشترك فيه في قوة ثنائية لفرض العلامة مع شركة العملة الكهربائية. وتوضح [مقالة](https://www.coindesk.com/zcash-trademark-talks-were-about-more-than-a-logo) CoinDesk كيف أن النزاع كان حول أكثر من مجرد الشعار، وسلطة حامل العلامة التجارية في أن يقرر بفعالية سلسلة زيكاش.
+توصلت مؤسسة زيكاش وشركة العملة الإلكترونية إلى [اتفاقية](https://www.zfnd.org/blog/zcash-trademark-resolution/) حول كيفية التعامل مع العلامة التجارية زيكاش. وقد تم نقل هذا إلى المؤسسة، مع الاتفاق الذي تشترك فيه في قوة ثنائية لفرض العلامة مع شركة العملة الإلكترونية. وتوضح [مقالة](https://www.coindesk.com/zcash-trademark-talks-were-about-more-than-a-logo) CoinDesk كيف أن النزاع كان حول أكثر من مجرد الشعار، وسلطة حامل العلامة التجارية في أن يقرر بفعالية سلسلة زيكاش.
 
 تضيف ديكريد بُعداً آخر حيث يتم تأسيس شرعية السلسلة من قِبَل الناخبين، وتُحفزُ تفرعات الأقليات إلى حد كبير بالتحديات الكبيرة التي يتعين التغلب عليها. حتى إذا حاول شخص ما سرقة "العلامة التجارية" لديكريد، فلا ينبغي أن يكون هناك التباس حول السلسلة الأصلية لأن الناخبين يوقعون على كل كتلة. وأيضا، فديكريد لديها إجابة واضحة بشأن "من يوظف منظمة التطوير؟ ما هو "المجتمع"؟" - أصحاب الحصص.
 
-سمح حل مشكلة العلامة التجارية لشركة ZEC بمتابعة عملية [الاقتراع](https://www.zfnd.org/blog/community-sentiment-collection-poll/) بالنسبة لـ NU4، حيث يمكن للنظام البيئي/المجتمع المحلي لشركة زيكاش أن يشير إلى دعم 13 خيارًا لتمويل التطوير. وستنظر شركة العملات الكهربائية ومؤسسة زيكاش في النتائج من 3 [أو 4](https://twitter.com/zooko/status/1200917828011876352) طرق اقتراع مختلفة عند تحديد الخطة التي ستتبناها.
+سمح حل مشكلة العلامة التجارية لشركة ZEC بمتابعة عملية [الاقتراع](https://www.zfnd.org/blog/community-sentiment-collection-poll/) بالنسبة لـ NU4، حيث يمكن للنظام البيئي/المجتمع المحلي لشركة زيكاش أن يشير إلى دعم 13 خيارًا لتمويل التطوير. وستنظر شركة العملات الإلكترونية ومؤسسة زيكاش في النتائج من 3 [أو 4](https://twitter.com/zooko/status/1200917828011876352) طرق اقتراع مختلفة عند تحديد الخطة التي ستتبناها.
 
 [أنهت](https://blog.aragon.org/final-results-from-aragon-network-vote-4/) أراغون الجولة الرابعة من تصويت AGP، وتم التصويت على 15 مقترحا، وقد بلغت نسبة المشاركة في ANT تتراوح بين 3 و 18 في المائة. كان من بين المقترحات المعتمدة [AGP-103](https://github.com/aragon/AGPs/blob/master/AGPs/AGP-103.md)، تقديم ميزانية شبكة قصوى تبلغ 5٪ من قيمة الخزينة أو 250,000 DAI (أيهما أكبر) في كل دورة تصويت فصلية. أكبر اقتراح للموافقة عليه (بنسبة إقبال 9٪، موافقة 91٪) هو [AGP-106](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-106.md) لتطوير وإطلاق سلسلة أراغون، بتكلفة 500,000 دولار. والهدف من ذلك هو إنشاء بروتوكول جديد للطبقة الأولى، وتقديمه كبديل لشبكة أراغون المستندة إلى الإيثيريوم. من بين الأسباب المذكورة زيادة التكاليف لمواكبة التغييرات في شبكة الإيثيريوم. [AGP-112](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-112.md)، والذي تم تمريره أيضا، أصدر إعلانا بأن أراغون تعارض برنامج ProgPoW على الإيثيريوم، أو أي تغيير آخر غير طارئ على خوارزمية التعدين قبل إيثيريوم 2.0. و كانت أعلى نسبة مشاركة على إقتراح [AGP-81](https://github.com/aragon/AGPs/raw/1bee7c003d2e0dbfdc8cfe698198adeaf2cf0c7b/AGPs/AGP-81.md)، حيث تبين أن 17% من ANT صوتوا بالرفض على التعاون مع كليروس في نظام المحاكم.
 
@@ -338,7 +338,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 [أعلن](https://www.newyorkfed.org/markets/opolicy/operating_policy_191114) بنك الاحتياطي الفيدرالي الأمريكي أنه سيقوم بتوسيع تدخلاته في السوق من خلال تقديم "عمليات إعادة شراء" لمدة 42 يومًا (قروض من نوع ما)، بالإضافة إلى عمليات إعادة شراء ليوم واحد و 14 يومًا بدأت في شتنبر و "عمليات شراء" لسندات الخزانة التي بدأت في أكتوبر . إذا تساءلت يومًا عن من يحصل على هذه القروض، فسيتعين عليك الانتظار عامين للكشف عنها.
 
-تقوم الشّركات الأمريكيّة [بتكديس النّقد](https://www.axios.com/businesses-spending-indicators-recession-533481fc-dba7-4b5c-add4-c11628c335bc.html) للإعداد للآساد الاقتصاديّ. ومن الجدير بالملاحظة من قصة أكسيوس: "تُظهِر البيانات الواردة من معهد شركات الاستثمار أنه على الرغم من ارتفاع سوق الأوراق المالية بنسبة تقرب من 25% هذا العام، فإن المستثمرين كانوا من البائعين الصافين للأسهم، ساحبين 100 مليار دولار من صناديق الأسهم". مقال [التحوط الصفري](https://www.zerohedge.com/markets/conundrum-2019-equity-outflows-are-biggest-ever-yet-stocks-are-all-time-highs-what-happens) يظهر ظاهرة غريبة تتمثل في الأموال التي تتدفق من الأسهم، ومع ذلك سجلت الأسعار مستويات قياسية جديدة. كيف؟ بعض العوامل التي تجعل ذلك ممكنا كون الشركات نفسها هي أكبر المشترين عن طريق إعادة شراءها للأسهم، حيث تقوم البنوك المركزية بتكوين أموال تتدفق إلى الأسهم، مقترنة بانخفاض متزامن في حجم التداول.
+تقوم الشّركات الأمريكيّة [بتكديس النّقد](https://www.axios.com/businesses-spending-indicators-recession-533481fc-dba7-4b5c-add4-c11628c335bc.html) للإعداد للكساد الاقتصاديّ. ومن الجدير بالملاحظة من قصة أكسيوس: "تُظهِر البيانات الواردة من معهد شركات الاستثمار أنه على الرغم من ارتفاع سوق الأوراق المالية بنسبة تقرب من 25% هذا العام، فإن المستثمرين كانوا من البائعين الصافين للأسهم، ساحبين 100 مليار دولار من صناديق الأسهم". مقال [التحوط الصفري](https://www.zerohedge.com/markets/conundrum-2019-equity-outflows-are-biggest-ever-yet-stocks-are-all-time-highs-what-happens) يظهر ظاهرة غريبة تتمثل في الأموال التي تتدفق من الأسهم، ومع ذلك سجلت الأسعار مستويات قياسية جديدة. كيف؟ بعض العوامل التي تجعل ذلك ممكنا كون الشركات نفسها هي أكبر المشترين عن طريق إعادة شراءها للأسهم، حيث تقوم البنوك المركزية بتكوين أموال تتدفق إلى الأسهم، مقترنة بانخفاض متزامن في حجم التداول.
 
 "متعة" هذه الديناميات حيث [يتجه المستثمرين إلى النقد](https://www.bloomberg.com/news/articles/2019-11-12/world-s-rich-readying-for-major-stock-sell-off-ubs-wealth-says) هو أنه على الرغم من أنها تعمل على توفير قيمتها من الأصول الأكثر خطورة وأسعار الفائدة السلبية، فإنها سوف تظل مخففة من خلال خلق الأموال النقدية بحيث [يكاد يكون من المستحيل](https://www.home.saxo/en-hk/insights/content-hub/articles/2019/11/20/investing-themes-to-watch-over-the-next-decade) وقفها الآن.
 
@@ -358,7 +358,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 قامت GitHub [بإزالة](https://techcrunch.com/2019/10/30/github-removes-tsunami-democratics-apk-after-a-takedown-order-from-spain/) APK من تطبيق لتنظيم الاحتجاجات في كتالونيا ، بناءً على طلب إزالة من المحكمة أرسلته قوة الشرطة الوطنية الإسبانية.
 
-[اختفى](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) المدير التنفيذي لشركة IDAX التي مقرها منغوليا مع مفاتيح التخزين البارد لمنصة التبادل. وقبل ذلك بخمسة أعلنت منصة التبادل عن [مشاكل](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) في السحب وأنه لن يخدم المستخدمين في [الصين](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China) بعد الآن. هذا يذكرنا بقضية QuadrigaCX الكندية التي اختفت مفاتيحها بشكل غامض مع المدير التنفيذي. والنقاط الأساسية هنا هي: أطلب من عدة أشخاص الإحتفاظ بالمفاتيح كإحتياط إذا ما قمت بإدارة خدمة هامة، وفحص التبادلات الخاصة بك، وبشكل مثالي المساهمة في استبدال تبادلات الوديعة بأخرى [غير وصائية](https://github.com/decred/dcrdex).
+[اختفى](https://idax.zendesk.com/hc/en-us/articles/360037327571-Urgent-announcement-about-current-situation-of-IDAX-Global) المدير التنفيذي لشركة IDAX التي مقرها منغوليا مع مفاتيح التخزين البارد لمنصة التبادل. وقبل ذلك بخمسة أيام أعلنت منصة التبادل عن [مشاكل](https://idax.zendesk.com/hc/en-us/articles/360036736211-Announcement-of-IDAX-withdrawal-channel-congestion) في السحب وأنه لن يخدم المستخدمين في [الصين](https://idax.zendesk.com/hc/en-us/articles/360036736691-IDAX-no-longer-provide-services-for-users-in-China) بعد الآن. هذا يذكرنا بقضية QuadrigaCX الكندية التي اختفت مفاتيحها بشكل غامض مع المدير التنفيذي. والنقاط الأساسية هنا هي: أطلب من عدة أشخاص الإحتفاظ بالمفاتيح كإحتياط إذا ما قمت بإدارة خدمة هامة، وفحص التبادلات الخاصة بك، وبشكل مثالي المساهمة في استبدال تبادلات الوديعة بأخرى [غير وصائية](https://github.com/decred/dcrdex).
 
 كان هناك إصدار مدعوم من طروادة من متصفح Tor [يستهدف](https://www.welivesecurity.com/2019/10/18/fleecing-onion-trojanized-tor-browser/) مستخدمي البتكوين، إكتشف من طرف ESET. كان إصدار طروادة ينتشر من `tor-browser[.]org` و نطاقات `torproect[.]org`.
 
@@ -368,7 +368,7 @@ _الصورة: نقل السلطة بواسطة saender@_
 
 تمت ملاحظة محفظة مزيفة أخرى لديكريد تم الإبلاغ عنها وإزالتها بسرعة من GitHub. يبدو الحساب الذي يحمل إسم `decreds` وطريقة نشر الإصدار المزيّف 1.5.0 مشابهًا للإصدار السابق "تحديث إلزامي للإصدار 1.5.0" من `DecredCoin` الذي تمت تغطيته في عدد [شتنبر](https://xaur.github.io/decred-news/journal/201909.html). يبدو أن المخترقين لا يستطيعون إنتظار الإصدار 1.5 النهائي _(نحن أيضا!)_. إذا واجهت أي شيء مثل هذا على GitHub أو في أي مكان آخر، يرجى الإبلاغ عنه على المنصة فورا وإخطار المجتمع لتقليل الضرر المحتمل.
 
-إذا لم تتمكن من تحميل ما يكفي من بياناتك إلى جوجل، فهي [تخطط](https://www.cnbc.com/2019/11/13/google-reportedly-offering-checking-accounts-next-year.html) لدخول الأعمال المصرفية وتقديم حسابات مراجعة العام المقبل. الاسم الرمزي للمشروع "ذاكرة التخزين المؤقت" أمر مثير للسخرية بعض الشيء لأنه في الغالب يتم مسح [ذاكرة التخزين](https://en.wikipedia.org/wiki/Cache_%28computing%29) المؤقت في الحوسبة.
+إذا لم تتمكن من تحميل ما يكفي من بياناتك إلى جوجل، فهي [تخطط](https://www.cnbc.com/2019/11/13/google-reportedly-offering-checking-accounts-next-year.html) لدخول الأعمال المصرفية وتقديم حسابات جارية العام المقبل. الاسم الرمزي للمشروع "ذاكرة التخزين المؤقت" أمر مثير للسخرية بعض الشيء لأنه في الغالب يتم مسح [ذاكرة التخزين](https://en.wikipedia.org/wiki/Cache_%28computing%29) المؤقت في الحوسبة.
 
 ## عن هذا العدد
 
