--- a/journal/201912.md
+++ b/journal/201912.md
@@ -48,7 +48,7 @@ _الصورة: متعدد الأوجه الجليدي بواسطة saender@_
 
 [dcrpool](https://github.com/decred/dcrpool): إضافة دعم احتياطي لتجهيز [طلبات الدفع](https://github.com/decred/dcrpool/pull/140) اليدوية، مما يسمح بتصفية أي رصيد متبقي قبل مغادرة التجمع. وأضيفت [تغطية اختبار](https://github.com/decred/dcrpool/pull/141) واسعة لمعظم المكونات.
 
-[dcrlnd](https://github.com/decred/dcrlnd): خريطة الشبكة البرقية لديكريد [فعالة])https://ln-map.jamieholdstock.com/). تجدر الإشارة إلى أنه على الرغم من دمج  الشبكة البرقية في ديكريديتون، إلا أنه يجب الأخذ في الإعتبار أنها لا تزال في النمط ألفا. إذا كنت ترغب في استخدام الشبكة البرقية على الشبكة الرئيسية، فمن المستحسن أن تبدأ على شبكة الاختبار، والتأكد من أنك مرتاح للعمليات التي ترغب في القيام بها على الشبكة الرئيسية، وعدم استخدام كميات كبيرة.
+[dcrlnd](https://github.com/decred/dcrlnd): خريطة الشبكة البرقية لديكريد [فعالة](https://ln-map.jamieholdstock.com/). تجدر الإشارة إلى أنه على الرغم من دمج  الشبكة البرقية في ديكريديتون، إلا أنه يجب الأخذ في الإعتبار أنها لا تزال في النمط ألفا. إذا كنت ترغب في استخدام الشبكة البرقية على الشبكة الرئيسية، فمن المستحسن أن تبدأ على شبكة الاختبار، والتأكد من أنك مرتاح للعمليات التي ترغب في القيام بها على الشبكة الرئيسية، وعدم استخدام كميات كبيرة.
 
 تم [تعديل](https://github.com/decred/dcrlnd/pull/62) تحديد المنفذ لجعل اختبارات الإدماج أكثر قوة. تمت [إضافة](https://github.com/decred/dcrlnd/pull/67) بناء Docker إلى إجراءات Github. و إزالة [بادئة ديكريد](https://github.com/decred/dcrlnd/pull/68). كما يستمر العمل على [نماذج Docker](https://github.com/decred/dcrlnd/pull/66) للتشغيل الآلي لبيئات simnet مع كل ما تحتاج إليه لتشغيل مجموعة الشبكة البرقية.
 
